Update Kafka_main.md